fix text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,6 @@
 .aboutme-header {
   background: #133269;
   display: inline-block;
-  margin-left: 37.5rem;
   padding: 5px 19px;
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -253,7 +252,6 @@
 .education-header {
   background: #133269;
   display: inline-block;
-  margin-left: 37.5rem;
   padding: 5px 11.5px;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -263,7 +261,6 @@
 .experience-header {
   background: #133269;
   display: inline-block;
-  margin-left: 37.5rem;
   padding: 5px 6.5px;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -272,7 +269,6 @@
 .project-header {
   background: #133269;
   display: inline-block;
-  margin-left: 37.5rem;
   padding: 5px 28.5px;
   margin-top: 2rem;
   margin-bottom: 1rem;
